Add unit test in findprices with mocking repositories Create test and used HDD. Create class about prices.